--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,22 @@
 *.class
 
 # Generated files
-bin/
+# Build results
 gen/
 out/
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+
+# Visual Studio cache/options directory
+.vs/
 
 # Gradle files
 .gradle/
